tests/type-logic.stderr
error: could not determine the type of this expression
   ┌─ test:17:5
   │
17 │ _ : _ -> a
   │     ^^^^^^
   │     │
   │     try annotating the type with `::`
   │     this has type `_ -> False`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: could not determine the type of this expression
   ┌─ test:21:5
   │
21 │ _ : _ -> b
   │     ^^^^^^
   │     │
   │     try annotating the type with `::`
   │     this has type `_ -> False`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: could not determine the type of this expression
   ┌─ test:25:5
   │
25 │ _ : _ -> c
   │     ^^^^^^
   │     │
   │     try annotating the type with `::`
   │     this has type `_ -> True`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

