tests/type-logic.wpl
Z : type
S : N => type

True : type
False : type

[sealed]
[allow-overlapping-instances]
Less-Than : A B R => trait
N => instance (Less-Than N N False)
instance (Less-Than (S _) Z False)
instance (Less-Than Z (S _) True)
A B R where (Less-Than A B R) => instance (Less-Than (S A) (S B) R)

a :: A where (Less-Than Z Z A) => A
a : ...
_ : _ -> a

b :: A where (Less-Than (S Z) Z A) => A
b : ...
_ : _ -> b

c :: A where (Less-Than (S (S Z)) (S (S (S Z))) A) => A
c : ...
_ : _ -> c
